# data_ingestion

./: .env.dev  .gitignore  Cargo.toml  Dockerfile  README.md  aws-oidc-setup.yaml  build.sh  dev-test.sh  docker-compose.yml  generate_avro.py  generate_excel.py  generate_parquet.py  migration.js  samconfig.toml  template.yaml
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  security.yml
localstack/: init.sh
marketplace/: README.md  marketplace-template.yaml
src/: ecs_service.rs  lib.rs  main.rs
src/application/: ingestion_service.rs  mod.rs
src/domain/: error.rs  mod.rs  models.rs  ports.rs
src/infrastructure/: mod.rs  parser_adapter.rs  s3_adapter.rs
src/infrastructure/couchdb/: config_repo.rs  data_repo.rs  mod.rs
src/infrastructure/documentdb/: config_repo.rs  data_repo.rs
src/infrastructure/mongodb/: config_repo.rs  data_repo.rs  log_repo.rs  mod.rs
src/infrastructure/parsers/: avro_parser.rs  csv_parser.rs  excel_parser.rs  json_parser.rs  mod.rs  parquet_parser.rs  txt_parser.rs  xml_parser.rs
src/tests/: avro_parser_tests.rs  config_matching_tests.rs  csv_parser_tests.rs  mod.rs  parquet_parser_tests.rs
